<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntroductionActivity">


    <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="603dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/scrollView2"
                app:layout_constraintTop_toTopOf="@+id/scrollView2">

            <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/font_honey"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="275dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/honey_logo_bee" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/font_honey"
                    android:gravity="center"
                    android:text="@string/honeyDescription"
                    android:textSize="25sp"
                    android:visibility="visible" />

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="233dp"
                    android:layout_height="243dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/location_img" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_honey"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:text="@string/location"
                    android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>