<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="603dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/scrollView"
                app:layout_constraintTop_toTopOf="@+id/scrollView">

            <ImageView
                    android:id="@+id/recipeImg"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:paddingTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center"
                    android:src="@mipmap/ic_no_connection" />

            <TextView
                    android:id="@+id/recipeTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/recipe_font"
                    android:gravity="center_horizontal"
                    android:paddingTop="4dp"
                    android:text="Recipe Title"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/yieldTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/recipe_font"
                    android:gravity="center_horizontal"
                    android:paddingLeft="5dp"
                    android:text="@string/yield"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/recipe_font"
                    android:gravity="center_horizontal"
                    android:text="@string/ingredients"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/ingredientsTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/recipe_font"
                    android:gravity="center_horizontal"
                    android:paddingTop="2dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/linkTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/recipe_font"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/link"
                    android:textSize="20sp"
                    android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>